--- a/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
+++ b/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
@@ -9,7 +9,7 @@
                 <mat-tab>
                     <form>
                         <ng-template mat-tab-label>
-                            <label matTooltip="Search Venue in Database">Search</label>
+                            <label matTooltip="Search Venue in Database" style="margin: 0;">Search</label>
                         </ng-template>
                         <br>
                         <mat-form-field appearance='outline' style="margin: 0; padding: 0;">
@@ -23,18 +23,17 @@
                 <!-- Custom Venue -->
                 <mat-tab>
                     <form [formGroup]='customVenueForm'>
-                        <ng-template mat-tab-label>
-                            <label matTooltip="Add Custom Venue">Custom</label>
+                        <ng-template mat-tab-label >
+                            <label style="margin: 0;">Custom</label>
+                            &nbsp;
+                            <mat-icon matTooltip="Add Custom Venue">info</mat-icon>
                         </ng-template>
                         <br>
                         <mat-form-field appearance='outline'>
-                            <mat-label>Venue Name</mat-label>
+                            <mat-label>Venue Name*</mat-label>
                             <input matInput type="text" autocomplete="off" formControlName='name'>
+                            <small class="text-danger" *ngIf="!customVenueForm.get('name').valid && customVenueForm.get('name').touched">Name must be between 1 and 20 characters</small>
                         </mat-form-field>
-                        <!-- <mat-form-field appearance='outline' style="display: inline-block">
-                            <mat-label>City</mat-label>
-                            <input matInput type='text' autocomplete="country">
-                        </mat-form-field> -->
                         <app-city-search #citySearch [appearance]='citySearchAppearance' [placheholder]='citySearchPlaceholder'></app-city-search>
                         <mat-form-field appearance='outline' style="display: inline-block">
                             <mat-label>Adress</mat-label>
