--- a/frontend/src/app/components/userprofile/userprofile.component.html
+++ b/frontend/src/app/components/userprofile/userprofile.component.html
@@ -39,11 +39,11 @@
     </div>
     <!-- view history -->
     <div>
-      <!-- <p *ngFor="let item of searchResult|null:['history']">{{item}}</p> -->
+      <p *ngFor="let item of content|null:['history']">{{item}}</p>
     </div>
     <!-- view wishlist -->
     <div>
-      <!-- <p *ngFor="let item of searchResult|null:['whishlist']">{{item}}</p> -->
+      <p *ngFor="let item of content|null:['whishlist']">{{item}}</p>
     </div>
   </mat-card-content>
 </mat-card>
