--- a/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
+++ b/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
@@ -36,7 +36,7 @@
                         </mat-form-field>
                         <app-city-search #citySearch [appearance]='citySearchAppearance' [placheholder]='citySearchPlaceholder'></app-city-search>
                         <mat-form-field appearance='outline' style="display: inline-block">
-                            <mat-label>Adress</mat-label>
+                            <mat-label>Street Address</mat-label>
                             <input matInput type='text' autocomplete="street-address">
                         </mat-form-field>
                         <mat-form-field appearance='outline'>
