--- a/frontend/src/app/components/tabs/mytrip/mytrip.component.html
+++ b/frontend/src/app/components/tabs/mytrip/mytrip.component.html
@@ -12,31 +12,33 @@
             &nbsp;<h2 class="align-self-center">No trips Yet...</h2>
         </div>
         <mat-accordion class="container-fluid" style="min-height: 750px;"  >
-            <mat-expansion-panel *ngFor='let trip of trips, let i = index'>
+            <mat-expansion-panel #pan *ngFor='let trip of trips, let i = index'>
                 <mat-expansion-panel-header class="my-headers-align">
-                    <mat-panel-title>{{trip.name}}</mat-panel-title>
-                    <mat-panel-description>{{trip.dateRange.start|date}} &mdash; {{trip.dateRange.end|date}}</mat-panel-description>
+                    <mat-panel-title class="align-self-center">{{trip.name}}</mat-panel-title>
+                    <mat-panel-description class="align-self-center" >{{trip.dateRange.start|date}} &mdash; {{trip.dateRange.end|date}}</mat-panel-description>
+                    <span (click)="pan.toggle()" style="margin-right: 1em;">  
+                        <button mat-button (click)='ok()' color='primary' matTooltip='share this trp'>    
+                            <mat-icon>share</mat-icon>
+                        </button>
+                        <button mat-button (click)='ok()' color='accent' matTooltip='show itinerary on map' >    
+                            <mat-icon>map</mat-icon>
+                        </button>
+                    </span>
                 </mat-expansion-panel-header>
                 <mat-card>
                     <mat-card-title>
                         <div class="row">
                             <div class="col-auto mr-auto align-self-center">{{ trip.name }}</div>
-                            <div class="col-auto" style="padding-left: 0; padding-right: 0;" matTooltip='share this trip'>
-                                <button mat-button color='primary' style="padding-left: 0; padding-right: 0;">    
-                                    <mat-icon class="">share</mat-icon>
-                                </button>
-                            </div>
-                            <div class="col-auto" style="padding-left: 0; padding-right: 0;" matTooltip='show itinerary on map'>
-                                <button mat-button color='primary' style="padding-left: 0; padding: 0;">    
-                                    <mat-icon> map</mat-icon>
-                                </button>
-                            </div>
                         </div>               
                     </mat-card-title>
                     <mat-card-header class="">{{ trip.dateRange.start | date }} - {{ trip.dateRange.end | date }} &nbsp; ({{trip.dateRange.length}} days)</mat-card-header>
                     <br>
                     <mat-card-content class="">
-                        <mat-accordion>
+                        <div class="example-action-buttons">
+                            <button mat-button (click)="TripAccordion.openAll()">Expand All</button>
+                            <button mat-button (click)="TripAccordion.closeAll()">Collapse All</button>
+                          </div>
+                        <mat-accordion #acc multi>
                                 <mat-expansion-panel *ngFor='let schedule of trip.schedule, let j = index'>
                                     <mat-expansion-panel-header>
                                         <mat-panel-title>
